bugfix#49697 - replaced new Boolean with Boolean.valueOf